--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/survey-form.min.js"></script>
-
+  <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
 </body>
 
 </html>
