--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <h4 class="text-uppercase m-0">Github</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="https://github.com/milanmayr">@milanmayr</a>
+                <a href="https://github.com/milanmayr" target="_blank">@milanmayr</a>
               </div>
             </div>
           </div>
